--- a/index.html
+++ b/index.html
@@ -2,10 +2,27 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Dig-Deep Search</title>
+    <title>FindIt Search</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
   </head>
-  <body>
 
+  <body class="container">
+    <div class="search-engine">
+      <span class="green">F</span>
+      <span class="blue">I</span>
+      <span class="yellow">N</span>
+      <span class="purple">D</span>
+      <span class="green"> </span>
+      <span class="red">I</span>
+      <span class="blue">T</span>
+    </div>
+    <section class="result">
+      <input type="text" placeholder="Search ...">
+    </section>
+    <div class="search-button">
+      <a href="#" class="common-Button">Search</a>
+    </div>
   </body>
+  <script src="https://use.fontawesome.com/ae51d7fb8d.js"></script>
 </html>
